Bug 1216615 - Add spacing on devtools-searchbox instead of devtools-searchinput;r=pbrosset
UltraBlame original commit: 0a5d8b46660d7bdfe50dfaafd6514a37f942e1c8

--- a/devtools/client/themes/toolbars.inc.css
+++ b/devtools/client/themes/toolbars.inc.css
@@ -2434,7 +2434,7 @@ none
 margin
 :
 1px
-0
+3px
 ;
 border
 :
@@ -2665,6 +2665,43 @@ flex
 position
 :
 relative
+;
+padding
+:
+0
+3px
+;
+}
+.
+devtools
+-
+searchbox
+>
+.
+devtools
+-
+textinput
+.
+devtools
+-
+searchbox
+>
+.
+devtools
+-
+searchinput
+{
+margin
+-
+left
+:
+0
+;
+margin
+-
+right
+:
+0
 ;
 }
 .
